docs(swagger): update EndpointJob documentation
